fix navbar toggler button bug, overflow-x bug, make technologies not expand height with the title, make See my CV button text white when hovering

--- a/css/about.css
+++ b/css/about.css
@@ -23,7 +23,11 @@
     width: 70%;
 }
 
-.aboutAvatarSection a{
+.aboutAvatarSection>button:hover>a {
+    color: white;
+}
+
+.aboutAvatarSection a {
     text-decoration: none;
 }
 
